# konami-character-recognizer

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  pysen.toml  test.py
images/: readme.txt
