[tool.poetry]
name = "konami-login"
version = "0.1.0"
description = ""
authors = ["koiking213 <koiking213@gmail.com>"]
readme = "README.md"
packages = [{include = "konami_login"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
cv = "^1.0.0"
opencv-contrib-python = "^4.7.0.68"
pysen = "^0.10.3"
black = "22.3.0"
flake8 = "4.0.1"
isort = "5.10.1"
mypy = "0.910"
pytest = "^7.2.1"
python-opencv-utils = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
